[project]
dependencies = [
    "ansimarkup>=1.0.0",
    "colorama>=0.4,<1",
    "graphql-core>=3.2,<3.3",
    "graphene>=3.4.0,<3.5",
    # Note: can't pin jinja2 any higher than this until we give up on Cylc 7 back-compat
    "jinja2==3.0.*",
    "metomi-isodatetime>=1!3.0.0,<1!3.2.0",
    # Constrain protobuf version for compatible Scheduler-UIS comms across hosts
    "packaging",
    "protobuf>=5,<8",
    "psutil>=5.6.0",
    "pyzmq>=22",
    # NOTE: exclude two urwid versions that were not compatible with Tui
    "urwid>=2.2,!=2.6.2,!=2.6.3,<4",
]

[project.optional-dependencies]
graph = [
    "pillow",
]
main_loop-log_data_store = [
    "pympler",
    "matplotlib",
]
main_loop-log_main_loop = [
    "matplotlib",
]
main_loop-log_memory = [
    "pympler",
    "matplotlib",
]
main_loop-log_db = [
    "sqlparse",
]
report-timings = [
    "pandas==2.*",
    "matplotlib",
]
tests = [
    "aiosmtpd",
    "async_generator",
    "bandit>=1.7.0",
    "coverage>=7.9.0",
    "flake8-broken-line>=0.3.0",
    "flake8-bugbear>=21.0.0",
    "flake8-builtins>=1.5.0",
    "flake8-comprehensions>=3.5.0",
    "flake8-debugger>=4.0.0",
    "flake8-implicit-str-concat>=0.4",
    "flake8-mutable>=1.2.0",
    "flake8-simplify>=0.14.0",
    "flake8-type-checking",
    "flake8>=3.0.0",
    "mypy>=0.910",
    # https://github.com/pytest-dev/pytest-asyncio/issues/706
    "pytest-asyncio>=0.21.2,!=0.23.*",
    "pytest-cov>=2.8.0",
    "pytest-xdist>=2",
    "pytest-mock>=3.7",
    "pytest>=6",
    "testfixtures>=6.11.0",
    "towncrier>=24.7.0",
    # Type annotation stubs
    # http://mypy-lang.blogspot.com/2021/05/the-upcoming-switch-to-modular-typeshed.html
    "types-Jinja2>=0.1.3",
    "types-protobuf>=0.1.10,!=5.29.1.20250402",
]
tutorials = [
    "h5py",
    "requests",
]
all = [
    "cylc-flow[graph]",
    "cylc-flow[main_loop-log_data_store]",
    "cylc-flow[main_loop-log_main_loop]",
    "cylc-flow[main_loop-log_memory]",
    "main_loop-log_db",
    "report-timings",
    "tests",
    "tutorials",
]

[tool.towncrier]
directory = "changes.d"
name = "Cylc"
package = "cylc.flow"
filename = "CHANGES.md"
template = "changes.d/changelog-template.jinja"
underlines = ["", "", ""]
title_format = "## __cylc-{version} (Released {project_date})__"
issue_format = "[#{issue}](https://github.com/cylc/cylc-flow/pull/{issue})"
ignore = ["changelog-template.jinja"]

# These changelog sections will be shown in the defined order:
[[tool.towncrier.type]]
directory = "break" # NB this is just the filename not directory e.g. 123.break.md
name = "⚠ Breaking Changes"
showcontent = true
[[tool.towncrier.type]]
directory = "feat"
name = "🚀 Enhancements"
showcontent = true
[[tool.towncrier.type]]
directory = "fix"
name = "🔧 Fixes"
showcontent = true


# Not mandated to use these tools, but if you do:

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.format]
quote-style = "preserve"


[tool.black]
line-length = 79
target-version = ['py312']
skip-string-normalization = true


[tool.isort]
profile = "black"
line_length = 79
force_grid_wrap = 2
lines_after_imports = 2
combine_as_imports = true
force_sort_within_sections = true

[tool.ruff.lint.isort]
# force-grid-wrap = 2  # astral-sh/ruff#2601
lines-after-imports = 2
combine-as-imports = true
force-sort-within-sections = true
